<resources>
    <string name="app_name">Comunicacion-tcp-auto</string>
    <string name="action_about">About</string>
    <string name="connect_button">CONECTAR</string>
    <string name="disconnect_button">DESCONECTAR</string>
    <string name="submit_configuration">GUARDAR</string>
    <string name="default_configuration">POR DEFECTO</string>
    <string name="configuration_title">CONFIGURACIÓN</string>
    <string name="option1">Dirección IP</string>
    <string name="option2">Puerto</string>
    <string name="option_selected_key">OPTION_SEL</string>
    <string name="comando_frenar">frenar</string>
    <string name="comando_izq">izquierda</string>
    <string name="comando_der">derecha</string>
    <string name="comando_retroceder">retroceder</string>
    <string name="comando_avanzar">avanzar</string>
    <string name="IP_default">192.168.0.5</string>
    <string name="PORT_default">80</string>
    <string name="comando_obst_frenar">FRENAR</string>
    <string name="comando_obst_cambiar">CAMBIAR</string>
    <string-array name="options_obj_det">
        <item>Frenar</item>
        <item>Tomar otra direccion</item>
    </string-array>

</resources>
